--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        //{
+        //    "name": "Chrome",
+        //    "type": "chrome",
+        //    "request": "launch",
+        //    "url": "http://localhost:3000",
+        //    "webRoot": "${workspaceRoot}/src"
+        //},
+        
         {
             "name": "Launch Package",
             "type": "go",
