--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "js-yaml": "^4.1.0",
+    "navbar-react": "^1.0.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
